# esp32-birdfight

./: CMakeLists.txt  README.md
ext/: rcore_esp32.cpp
res/birds/: LICENSE
src/: main.c  main.cpp  rcore_esp32.cpp
